[package]
name = "merriam-webster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
itertools = "0.11.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.100"

[[bin]]
name = "mw"
path = "src/main.rs"
  
